# camera-things

./: .gitignore  .main.cpp.swp  .main.py.swp  ;  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  camera  camera.py  cmake_install.cmake  connection_listener.py  function_queue.hpp  main  main.cpp  main.py  main.py~  mavlink.cpp  mavlink.hpp  mavlink.py  meson.build  messageParser.hpp  obc_port.cpp  obc_port.hpp  port.hpp  raspy  raspy.cpp  readme.md  simple-cam  simple-cam-temp.cpp  simple-cam.cpp  simple-cam.cpp.temp  simple-cam.hpp  test.cpp  testing.py  testing.sh  time_logging.py  time_logging.py~  udp_client.cpp  (+1 more)
.github/workflows/: build.yml
config/: picam.json
images/mock/: 1771799666654.json  1771800442263.json  1771801812027.json  1771802188998.json  1771803453961.json  1771803495393.json  1771803537826.json  1771803595291.json  1771803616557.json  1771803622558.json  1771803626822.json  1771803631755.json  1771803635157.json  1771803639022.json  1771803641789.json  1771803653268.json  1771803658377.json  1771803681620.json  1771803684191.json  1771803686957.json  1771803689757.json  1771803692391.json  1771803698225.json  1771803702025.json  1771803707793.json  1771803711661.json  1771803715458.json  1771803719493.json  1771803723591.json  1771803727091.json  1771803729825.json  1771803740992.json
include/: function_queue.hpp  mavlink.hpp  obc_port.hpp  port.hpp  simple-cam.hpp
libs/loguru/: loguru.hpp
libs/mavlink/common/: common.h
src/: mavlink.cpp  mock_camera.cpp  mock_camera.hpp  obc_port.cpp  raspy.cpp  simple-cam.cpp  udp_client.cpp
